<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailproduct.DetailProductActivity" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".detailproduct.DetailProductActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_button"
                style="@style/BackButton"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_chevron_left_24_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/share_button"
                style="@style/ShareButtonStyle"
                android:contentDescription="@string/share_button"
                android:src="@drawable/baseline_share_24_grey"
                app:layout_constraintBottom_toBottomOf="@+id/back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_button" />

            <View
                android:id="@+id/view2"
                android:layout_width="406dp"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:contentDescription="@string/product_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="2"
                android:text="@string/product_name"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_image" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/product_price"
                android:textColor="@color/light_blue_600"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/product_name"
                app:layout_constraintTop_toBottomOf="@+id/product_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/shop_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/product_price"
                app:layout_constraintTop_toBottomOf="@+id/product_price"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_regular"
                android:maxWidth="325dp"
                android:maxLines="1"
                android:text="@string/shop_name"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/shop_image"
                app:layout_constraintTop_toTopOf="@+id/shop_image" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location"
                android:src="@drawable/location_icon_10"
                app:layout_constraintBottom_toBottomOf="@+id/shop_image"
                app:layout_constraintStart_toStartOf="@+id/shop_name"
                app:layout_constraintTop_toBottomOf="@+id/shop_name" />

            <TextView
                android:id="@+id/shop_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_regular"
                android:maxWidth="124dp"
                android:maxLines="1"
                android:text="@string/location"
                android:textColor="@color/grey"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <Button
                android:id="@+id/visit_store"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/visit_store"
                android:textColor="@color/deep_grey"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/shop_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/shop_image"
                app:strokeColor="@color/deep_grey"
                app:strokeWidth="2dp" />

            <View
                android:id="@+id/view3"
                android:layout_width="406dp"
                android:layout_height="1dp"
                android:layout_marginVertical="25dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shop_image" />

            <TextView
                android:id="@+id/subtitle_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/product_details"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/product_description_example"
                android:textColor="@color/grey"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.375"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitle_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/young_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view" />

    <Button
        android:id="@+id/cart"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        app:strokeColor="@color/deep_grey"
        app:strokeWidth="2dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buy_now"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buy_now"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buy_now"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/buy_now"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12sp"
        app:backgroundTint="@color/deep_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cart" />

</androidx.constraintlayout.widget.ConstraintLayout>
